--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <!--Section здесь-->
     <section class="section">
         <div class="container">
+            <h1>New title</h1>
             <div class="row">
                 <div class="col-xl-4 section_image">
                     <img src="img/logoimg.png" class="logo" alt="logo">
